2007-05-10  Johannes Schmid <jhs@gnome.org>

	* plugins/search/plugin.c:
	Make incremental search behave less annoying
	
2007-05-09 Sebastien Granjoux <seb.sfo@free.fr>

	* plugins/macro/macro-util.c:
	Fix bug #419008 and bug #419036
	When creating new header file, use name and email set in
	preferences and replace invalid C character by underscore
	in guards

2007-05-08 Sebastien Granjoux <seb.sfo@free.fr>

	* plugins/search/search-replace.c,
	plugins/search/search-replace_backend.c:
	Disable search button if search expression is empty (bug #378193)

2007-05-08  Naba Kumar  <naba@gnome.org>

	* plugins/project-wizard/templates/minimal/Makefile.am: Fixed
	build error.

2007-05-07  Naba Kumar  <naba@gnome.org>

	* configure.in:
	* plugins/project-wizard/templates/Makefile.am:
	* plugins/project-wizard/templates/minimal.wiz:
	* plugins/project-wizard/templates/minimal/.cvsignore:
	* plugins/project-wizard/templates/minimal/Makefile.am:
	* plugins/project-wizard/templates/minimal/Makefile.am.tpl:
	* plugins/project-wizard/templates/minimal/autogen.sh:
	* plugins/project-wizard/templates/minimal/configure.ac.tpl:
	* plugins/project-wizard/templates/minimal/project.anjuta:
	Added 'minimal', a generic and flat, project template.
	
2007-05-05  Naba Kumar  <naba@gnome.org>

	Patch from Cygwin Ports maintainer  <yselkowitz@users.sourceforge.net>:
 
	* configure.in: Define GNOME_CANVAS and fix GRAPHVIZ and SVN cflags/libs.
	* libanjuta/anjuta-launcher.c: Cygwin does not have B460800 or ECHOPRT.
	* libanjuta/interfaces/Makefile.am.iface: Fixed a typo.
	* libanjuta/interfaces/anjuta-idl-compiler.pl: Make a convenience library
	instead of a real one, fixes interdependency with libanjuta.
	* plugins/gdb/gdbmi.c: G_MODULE_EXPORT for gdbmi-test linking on Cygwin.
	* libanjuta/Makefile.am: 
	* libegg/Makefile.am:
	* plugins/build-basic-autotools/Makefile.am:
	* plugins/class-gen/Makefile.am:
	* plugins/class-inheritance/Makefile.am:
	* plugins/cvs-plugin/Makefile.am: